@@ -1,3 +1,5 @@
+* Make all loops use `element` and `elements` variables for better compression and bump datestamp. [Diego Perini, jddalton]
+
 * Replace `NATIVE_SLICE_PROTO` feature test with one from kangax's CFT. [Diego Perini, kangax]
 
 * Avoid infinite loop for non html elements in byName(). [jddalton]
